# rust-pass

./: .gitignore  Cargo.toml  README.md  build.rs  test.rpdb
src/: commands.rs  config.rs  create.rs  display.rs  main.rs  open.rs  parsing.rs  rng.rs
src/commands/: config.rs  create.rs  mod.rs  open.rs
src/protos/: config.proto  example.proto  header.proto  rpdb.proto
